tests/invalid-int-constant/out.txt
error: invalid integer constant: number too large to fit in target type
  ┌─ inp.sml:1:9
  │
1 │ val _ = 123123123123123123123123132131
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

lexing failed
